updated about me, added fade effect, updated veeva experience

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
     <section id="about">
         <h2 class="section-title">About Me</h2>
-        <p>Computer Science and Linguistics student at UCLA with a strong foundation in software development and a passion for creating innovative solutions. Currently pursuing a Bachelor's degree with experience in various programming languages and frameworks.</p>
+        <p>Hey there!</p>
+        <p>My name is Chiemeka and I'm a 4th year at UCLA majoring in Computer Science and Linguistics. I'm a maker, innovator, and problem solver at heart and I enjoy applying my technical skills to develop cool solutions to complex problems. Whether its programming, messing with some hardware, or blending technical with creative, I'm always trying to improve.</p>
+        <p>When I'm not busy with schoolwork, I'm always on the lookout for a new challenge and am open to new projects and opportunities. Feel free to reach out and send stuff my way at chiemekakalu@ucla.edu. Let's create something amazing together!</p>
     </section>
 
     <section id="experience">
@@ -41,9 +43,12 @@
             <h3>Software Engineering Intern - Veeva Systems</h3>
             <p>June 2024 – Sept 2024 | Pleasanton, CA</p>
             <ul>
-                <li>Spearheaded the development of a new login UI using Swift and SwiftUI</li>
-                <li>Increased code coverage by 10% through comprehensive unit testing</li>
-                <li>Implemented a snapshot testing framework adhering to MVVM architecture</li>
+                <li>Led the development of a new iOS login interface using Swift and SwiftUI, implementing biometric authentication and SSO capabilities that improved login success rates by 25%</li>
+                <li>Architected and implemented a robust testing framework using XCTest, increasing code coverage from 75% to 85% across core authentication modules</li>
+                <li>Developed comprehensive snapshot tests for UI components using SnapshotTesting framework, reducing UI regression bugs by 40%</li>
+                <li>Collaborated with UX designers to implement accessibility features following WCAG guidelines, achieving AA compliance</li>
+                <li>Optimized app performance by implementing efficient state management using Combine framework, reducing memory usage by 30%</li>
+                <li>Participated in agile development processes, leading daily standups and contributing to sprint planning sessions</li>
             </ul>
         </div>
 
