now page, map page, blog page, fixed email, fixed map
feat(spotify): Simplify Spotify integration with error-first approach

BREAKING CHANGE: Remove Spotify authentication flow in favor of graceful error handling

Added:
- spotify-now.js: New module for handling Spotify currently playing status
  - updateNowPlaying(): Fetches current track with error handling
  - showErrorState(): Displays user-friendly error message
  - updateNowPlayingUI(): Renders track info with progress bar
- New CSS styles for Spotify player and error states
  - Progress bar with transition animations
  - Responsive design for mobile
  - Error state styling with clear messaging

Modified:
- now.html: Removed Spotify SDK, simplified script imports
- styles.css: Added comprehensive styles for player UI
  - Album art presentation
  - Track info layout
  - Progress bar animations
  - Error state styling
  - Mobile-responsive adjustments

Technical Details:
- Removed OAuth flow to simplify user experience
- Added 30-second polling interval for track updates
- Implemented graceful error handling for API failures
- Used CSS Grid/Flexbox for responsive layout
- Added time formatting utilities for track progress

Future Improvements:
1. Add volume control integration
2. Implement play/pause controls if needed
3. Add track queue display
4. Consider WebSocket connection for real-time updates
5. Add offline mode detection

Testing:
- Verified error handling without auth
- Confirmed responsive design on mobile
- Tested progress bar updates
- Validated time display formatting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="now.html">Now</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -171,23 +172,17 @@
 
     <section id="contact">
         <h2 class="section-title">Contact Me</h2>
-        <div class="success-message" id="success-message">
-            Message sent successfully! I'll get back to you soon.
-        </div>
-        <div class="error-message" id="error-message">
-            Oops! Something went wrong. Please try again.
-        </div>
         <form id="contact-form">
             <div class="form-group">
-                <input type="text" id="name" required placeholder=" ">
+                <input type="text" id="name" name="name" required placeholder=" ">
                 <label for="name">Your Name</label>
             </div>
             <div class="form-group">
-                <input type="email" id="email" required placeholder=" ">
+                <input type="email" id="email" name="email" required placeholder=" ">
                 <label for="email">Your Email</label>
             </div>
             <div class="form-group">
-                <textarea id="message" required placeholder=" "></textarea>
+                <textarea id="message" name="message" required placeholder=" "></textarea>
                 <label for="message">Your Message</label>
             </div>
             <button type="submit">Send Message</button>
