updates to blog

--- a/blog.html
+++ b/blog.html
@@ -30,10 +30,10 @@
                 <h3>Categories</h3>
                 <ul id="category-filters">
                     <li data-category="all" class="active">All</li>
-                    <li data-category="tech">Tech</li>
-                    <li data-category="linguistics">Linguistics</li>
+                    <li data-category="blogAndUpdates">Blog and Updates</li>
                     <li data-category="projects">Projects</li>
-                    <li data-category="thoughts">Thoughts</li>
+                    <li data-category="music">Music</li>
+                    <li data-category="coolOrRandom">Cool or Random</li>
                 </ul>
             </div>
 
