small text changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Chiemeka Kalu</h1>
-            <p>Software Engineer | UCLA Computer Science</p>
+            <p>Software Engineer | UCLA Linguistics and Computer Science</p>
         </div>
     </section>
 
