--- a/now.html
+++ b/now.html
@@ -9,8 +9,6 @@
     <!-- Mapbox CSS and JS -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
-    <!-- Spotify Web Playback SDK -->
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
 </head>
 <body>
     <header>
@@ -28,7 +26,7 @@
     </header>
 
     <section id="now" class="now-section">
-        <h2 class="section-title">Where am I now?</h2>
+        <h2 class="section-title">What am I up to?</h2>
         
         <div class="status-container">
             <div class="location-container">
@@ -41,19 +39,7 @@
             </div>
 
             <div class="spotify-container">
-                <h3>Recently Played</h3>
-                <div class="spotify-embed">
-                    <iframe 
-                        style="border-radius:12px" 
-                        src="https://open.spotify.com/embed/user/chiemekakalu/recenttracks?utm_source=generator" 
-                        width="100%" 
-                        height="352" 
-                        frameBorder="0" 
-                        allowfullscreen="" 
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-                        loading="lazy">
-                    </iframe>
-                </div>
+                <div id="spotify-player"></div>
             </div>
         </div>
     </section>
